--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,6 @@ itertools = "0.10.1"
 #async-std = "1.10.0"
 chrono = "0.4.19"
 reqwest = { version = "0.11.9", features = ["blocking", "stream"] }
-async-std = { version = "1.10.0", features = ["tokio1"] }
+async-std = { version = "1.10.0", features = ["tokio1", "unstable"] }
 bytes = "1.1.0"
+futures-lite = "1.12.0"
